# nash-llm-server

./: .env.example  README.md  client_example.py  llm_client.py  pyproject.toml  test_llm_handler.py  test_mcp_basic.py  test_mcp_handler.py
.cursor/: file_organization.md  rules.md
.cursor/rules/: file_organization.mdc
app/: llm_handler.py  llm_server.py  llm_server_backup.py  mcp_client.py  mcp_handler.py  prompt_generator.py  prompts.py  server.py
app/prompts/: helpers.py
test_scripts/: api_credentials.py  message_display.py  test_chat_with_mcp.py  test_http_client.py  test_llm_handler.py  test_mcp_handler.py  tool_parser.py  tool_processor.py
